# Mobile_Selling_Chatbot_Vietnamese

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml
back-end/: .dockerignore  .env  Dockerfile  requirements.txt
back-end/app/: __init__.py  config.py  dependencies.py  exceptions.py  main.py
back-end/app/api/: router.py  ws.py
back-end/app/api/schemas/: __init__.py  chat.py  order.py  product.py
back-end/app/api/v1/: chat.py  health.py  orders.py  products.py  webhooks.py
back-end/app/database/: init_data_once_time.py
back-end/app/nlu/: __init__.py  intent_classifier.py  preprocessing.py  slang_map.json
back-end/app/rag/: __init__.py  retriever.py
back-end/app/services/: __init__.py  chat_orchestrator.py
front-end/: Dockerfile  chatting_bot.py
tests/: manual_test.py  test_rag_realdatabase.py
tests/unit/: test_rag.py
