[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["back-end/app"]

[project]
name = "mobile-selling-chatbot-vietnamese"
version = "0.1.0"
description = "AI-powered mobile phone selling chatbot for Vietnamese market using RAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # API framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Database
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    # Cache & sessions
    "redis>=5.0.4",
    # Vector store
    "qdrant-client>=1.9.0",
    # Embeddings & LLM
    "anthropic>=0.28.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "sentence-transformers>=3.0.0",
    # Utilities
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    # Frontend
    "streamlit>=1.35.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.8",
    "mypy>=1.10.0",
    "types-requests>=2.31.0",
]

[project.scripts]
ingest = "back_end.scripts.ingest:main"

# ---------------------------------------------------------------------------
# Ruff – linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["back-end", "front-end"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line too long – handled by formatter
    "B008",  # do not perform function calls in argument defaults (FastAPI deps pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
addopts = "-v --cov=back-end/app --cov-report=term-missing --cov-report=xml"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["back-end/app"]
omit = ["*/tests/*", "*/migrations/*"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
